style.css
* {
    padding: 0px;
    margin: 0px;
    font-family: Khula, Arial, Helvetica, sans-serif;
}

nav {
    background-color: white;
    box-shadow: 0px 2px 5px rgba(22, 22, 22, 0.637);
    height: 90px;
    position: sticky;
    top: 0px;
    z-index: 1;
}

nav div img {
    position: absolute;
    top: 15px;
    left: 20px;
    width: 60px;
}

nav div img + p {
    position: absolute;
    font-family: Urbanist;
    font-size: 1.6em;
    font-weight: 300;
    display: inline;
    top: 30px;
    left: 90px;
    text-decoration: none;
    color: black;
}

.nav-block {
    display: inline-block;
    text-decoration: none;
    color: black;
    text-align: center;
    font-size: 1.1em;
    vertical-align: middle;
    line-height: 90px;
    width: 120px;
    height: 90px;
}

.nav-block:hover {
    background-color: aqua;
}

section {
    width: auto;
    height: 840px; /*800px*/
}

#hero {
    /*display: none; /* Remove this */
    background-image: url(Logo.png);
    background-image: url(img/TT\ Table.jpg);
    background-size: cover;
}

#hero div {
    width: auto;
    height: 840px;
    background-image: linear-gradient(to right, #00798C 30%, rgba(0, 121, 140, 0));
}

#hero div h1 {
    font-family: Urbanist;
    font-size: 4.5em;
    font-weight: 500;
    display: block;
    width: 450px;
    position: relative;
    top: 300px;
    left: 200px;
}

#hero div p {
    display: inline-block;
    width: 300px;
    font-size: 1.7em;
    font-weight: 300;
    position: relative;
    top: 300px;
    left: 200px;
}

#gallery {
    background-color: #FAD4D8;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: column;
}

.pic {
    display: inline-block;
    width: 350px;
    padding: 0px;
    margin: 0px;
}

.scroller {
    max-width: 1600px;
    overflow: auto;
    /*border: 3px solid lime;*/
}

.inner-scroller {
    display: flex;
    padding-block: 1.5rem;
}

.scroller[data-animated="true"] {
    overflow: hidden;
    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
}

.scroller[data-animated="true"] .inner-scroller {
    width: max-content;
    flex-wrap: nowrap;
    animation: scroll 30s linear infinite;
}

#gallery button {
    background-color: #D9D9D9;
    width: 200px;
    height: 60px;
    border-radius: 50px;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
    font-size: 1em;
    font-weight: 400;
    text-align: center;
    border: none;
}

#gallery button:hover {
    background-color: #dfdfdf;
}

@keyframes scroll {
    to {
        transform: translate(calc(-50%));
    }
}

#social {
    background-color: #6D6875;
    display: flex;
    align-items: center;
    justify-content: space-around;
    /*display: none; /* Remove this */
}

#social div {
    display: flex;
    justify-content: space-between;
    width: 900px;
}

#social div div {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 400px;
    height: 600px;
    background-color: #5C878A;
    box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0.3);
    border-radius: 70px;
}

.icon {
    width: 150px;
    position: relative;
    top: -50px;
}

.social-box p {
    display: inline-block;
    height: 100px;
    width: 200px;
    position: relative;
    top: -20px;
    text-align: center;
    font-weight: 400;
}

.social-box button {
    background-color: #D7BCC8;
    width: 150px;
    height: 56px;
    border-radius: 28px;
    border-style: none;
    font-weight: 600;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
}

.social-box button:hover {
    background-color: #bcd3d7;
}

footer {
    background-color: #380036;
    height: 400px;
}

